--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -18,3 +18,11 @@
   margin-right: auto;
   @include make-max-width-container();
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+}
